--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 <body>
 
 </body>
+<p>grow or cause to grow and become more mature, advanced, or elaborate
+
+	"enabling individuals to develop their personal skills"
+
+	"motion pictures were to develop into mass entertainment"</p>
 
 </html>
